Prevent case of non-initialized music folder path.

BUG:259849